<resources>
    <string name="app_name">MusicWithNav</string>
    <string name="title_discover">Discover</string>
    <string name="title_hits">Hits</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add</string>
    <string name="title_user_dashboard">User DashBoard</string>
    <string-array name="sounds_types">
        <item>Choose Sound Type…</item>
        <item>Beat</item>
        <item>Instrumental</item>
        <item>Acapella</item>
        <item>Song</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_delete_sound">are you sure?</string>
    <string name="agree_delete_sound">delete</string>
    <string name="cancel_delete_sound">cancel</string>
    <string name="delete">delete</string>
    <string name="areYouSureYouWantToDeleteThisMessage">sure you want delete this message?</string>
    <string name="no">No</string>
    <string name="messageDeleted">message deleted</string>
    <string name="youCanDeleteOnlyYourMessages">you can delete only your messges</string>
    <string name="typing">typing</string>
    <string name="lastSeenAt">last Seen At</string>
    <string name="cannotSendTheEmptyMesaage">cannot Send The Empty Mesaage</string>
    <string name="blockedSuccessfully">blocked Successfully</string>
    <string name="failed">failed</string>
    <string name="unblockedSuccessfully">unblocked Successfully</string>
    <string name="cameraOp">camera Open</string>
    <string name="galleryOp">gallery Open</string>
    <string name="chooseImageFrom">choose Image From</string>
    <string name="cameraAndStorageBothPermissionAreNecessary">camera And Storage Both Permission Are Necessary</string>
    <string name="storagePermissionIsNecessary">storage Permission Is Necessary</string>
    <string name="online">online</string>
    <string name="message">message</string>


</resources>
