<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_discover" />

<!--    <item-->
<!--        android:id="@+id/navigation_hits"-->
<!--        android:icon="@drawable/ic_whatshot_black_24dp"-->
<!--        android:title="@string/title_hits" />-->

    <item
        android:id="@+id/addFragment"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_user_dashboard"
        android:icon="@drawable/ic_child_care_watermelon_theme_24dp"
        android:title="@string/title_user_dashboard" />




</menu>
